syntax = "proto3";

package clusterruntime.api.app;

import "google/protobuf/empty.proto";
import "internal/biz/app.proto";
import "api/app/message.proto";
import "api/common/error_reason.proto";

option go_package = "api/app;";

service AppInterface {

      rpc UploadApp(app.FileUploadRequest) returns(app.GetAppAndVersionInfo);

      rpc CheckCluster(google.protobuf.Empty) returns(app.CheckClusterResponse);

      rpc InstallBasicComponent(app.InstallBasicComponentReq) returns(app.InstallBasicComponentResponse);

      rpc GetAppReleaseResources(biz.app.AppRelease) returns(AppReleaseResourceItems);

      rpc DeleteApp(biz.app.App) returns (common.Msg);

      rpc DeleteAppVersion(app.DeleteAppVersionReq) returns (common.Msg);

      rpc GetAppAndVersionInfo(app.GetAppAndVersionInfo) returns (app.GetAppAndVersionInfo);

      rpc AppRelease(app.AppReleaseReq) returns (biz.app.AppRelease);

      rpc ReloadAppReleaseResource(biz.app.AppReleaseResource) returns (common.Msg);

      rpc DeleteAppRelease(biz.app.AppRelease) returns (common.Msg);

      rpc AddAppRepo(biz.app.AppRepo) returns (biz.app.AppRepo);
      
      rpc GetAppsByRepo(biz.app.AppRepo) returns (app.AppItems);

      rpc GetAppDetailByRepo(app.GetAppDetailByRepoReq) returns (biz.app.App);
      
}